name:                executable-hash
version:             0.1.0.0
synopsis:            Provides the SHA1 hash of the program executable
description:         See README.md
homepage:            https://github.com/fpco/executable-hash
license:             MIT
license-file:        LICENSE
copyright:           2015 FP Complete
author:              Michael Sloan
maintainer:          FP Complete <sloan@fpcomplete.com
category:            System
stability:           Stable
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  exposed-modules:     System.Executable.Hash
                     , System.Executable.Hash.Internal
  build-depends:       base
                     , executable-path >= 0.0.3 && < 0.1
                     , file-embed >= 0.0.4 && < 0.1
                     , bytestring
                     , cryptohash
                     , directory
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable inject-executable-hash
  main-is:             inject-executable-hash.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  build-depends:       base, executable-hash
  ghc-options:         -Wall

test-suite test-compute
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-compute.hs
  build-depends:       base, executable-hash
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test-inject
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-inject.hs
  build-depends:       base, executable-hash
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test-no-inject
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-no-inject.hs
  build-depends:       base, executable-hash
  default-language:    Haskell2010
  ghc-options:         -Wall
